Fix z-index issues

--- a/src/FeaturedTweets/featured-tweets.css
+++ b/src/FeaturedTweets/featured-tweets.css
@@ -1,4 +1,6 @@
 #featured-tweets-container {
+  position: relative;
+  z-index: 0;
   margin-top: 20px;
   min-width: 1180px;
 }
@@ -13,8 +15,8 @@
   text-align: left;
   padding: 1em;
 }
-
-.heading {
+#featured-tweets-container .heading {
+  z-index: 0;
   position: relative;
   margin-top: 3em;
   margin-bottom: 3em;
