--- a/src/FeaturedTweets/tweet.css
+++ b/src/FeaturedTweets/tweet.css
@@ -3,7 +3,6 @@
 }
 
 .tweet-category {
-  position: relative;
   margin-bottom: 1em;
 }
 
@@ -18,7 +17,6 @@
 }
 
 .tweet-category span {
-  position: absolute;
   font-weight: 300;
   color: #555;
   font-size: 1.4em;
