--- a/src/Header/header.css
+++ b/src/Header/header.css
@@ -21,7 +21,7 @@
   width: 100%;
   transition: height 0.3s;
   padding-bottom: 60px;
-  z-index: 10;
+  z-index: 1;
 }
 
 /* light purple #A37CED */
